    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".gasto">

    <EditText
        android:id="@+id/presupuestoEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_budget"
        android:inputType="numberDecimal" />


        <EditText
            android:id="@+id/gastoEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/presupuestoEditText"
            android:hint="@string/gasto"
            android:inputType="text" />
    <Spinner
        android:id="@+id/categoriaSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gastoEditText" />

    <Button
        android:id="@+id/guardarButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/categoriaSpinner"
        android:text="@string/button_save" />

</RelativeLayout>
