<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_generate_budget"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPresupuesto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTitle"
        android:layout_marginTop="16dp"
        android:hint="@string/hint_enter_budget"
        android:inputType="numberDecimal" />

    <Spinner
        android:id="@+id/spnNumeroPagos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etPresupuesto"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnGenerarPresupuesto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spnNumeroPagos"
        android:layout_marginTop="16dp"
        android:text="@string/btn_generate_budget" />

</RelativeLayout>
